<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCuratioUI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">SIGN IN</string>
    <string name="signin">Log in with &#x2026; </string>
    <string name="signinyouremail">or login with your e-mail address </string>
    <string name="next">NEXT</string>
    <string name="signup">SIGN UP</string>
    <string name="or">or</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="sorry">Sorry !</string>
    <string name="login">login</string>
    <string name="email">E-MAIL</string>
    <string name="count_click">No Of Clicks</string>
    <string name="total_click">Total Click</string>
    <string name="email_address">E-MAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="zipcode">ZIP CODE</string>
    <string name="phonenumber">PHONE NUMBER</string>
    <string name="dobdetails">Please select your birthday </string>
    <string name="forgot_password">Forgot username or password ?</string>
    <string name="passcode_details">Enter a 4-digit passcode</string>
     <string name="passcode_confirm">Confirm your passcode</string>
    <string name="email_details">with your e-mail address</string>
    <string name="title_activity_signup">SIGN IN</string>
    <string name="title_activity_account_recovery">SIGN UP</string>
    <string name="title_activity_user_details">SIGN UP</string>
    <string name="title_activity_user_dob">SIGN UP</string>
    <string name="send">SEND</string>
    <string name="congratulation">Congratulation\'s !</string>
    <string name="cancel">Cancel</string>
    <string name="error">Authentication Failure</string>
    <string name="title_activity_user_passcode">SIGN UP</string>
    <string name="title_activity_user_confirm_passcode">SIGN UP</string>
    <string name="btn_tryagain">TRY AGAIN</string>
    <string name="btn_forgotlogininfo">FORGOT LOGIN INFORMATION</string>
    <string name="custom_title">Uh oh &#x2026;</string>
    <string name="custom_alert">Looks like either your username or password isn\'t correct ,try again ?</string>
    <string name="custom_email_title">Alright,</string>
    <string name="custom_email_alert">If you just entered your e-mail address below,we can send a reminder</string>
    <string name="custom_account_title">Wait a minute,</string>
    <string name="custom_account_alert">We don\'t have that e-mail address on file,do you create an account ?</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="custom_success_alert">Your account has been created successfully and is ready to use</string>
    <string name="custom_error_alert">Passcode and Confirmation Passcode do not match</string>
    <string name="custom_caution_alert">Submit 4 digit passcode.Obey the rules</string>
    <string name="custom_passlimit_alert">Submit 4 digit Confirm passcode.Obey the rules</string>
    <string name="set_passcode">SET PASSCODE</string>
</resources>
