<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"  
    android:background="@drawable/bgdialog" 
    android:orientation="vertical">
    
    
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/custom_title"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"/>
  
   
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/custom_alert"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textSize="18sp"
       />
    
    <Button
        android:id="@+id/ButtonTryAgain"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/btn_tryagain"
        android:background="@drawable/customised_button"
        android:textColor="@android:color/white" 
        android:layout_marginTop="10dp"/>
    
     <Button
        android:id="@+id/ButtonForgotInfo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/btn_forgotlogininfo"
        android:background="@android:color/white"
        android:textColor="#54d66a" 
        />
    
  </LinearLayout>  
  

