<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"  
    android:background="@drawable/bgdialog" 
    android:orientation="vertical">
    
    
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/custom_account_title"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"/>
  
   
    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/custom_account_alert"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textSize="18sp"
       />
    
    
    
     <Button
        android:id="@+id/ButtonCreateAccount"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white" 
        android:background="#54d66a"
        android:layout_marginTop="10dp"
        android:clickable="true"
        />
     
    <Button
        android:id="@+id/ButtonCancel"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/cancel"
        android:textColor="#54d66a" 
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:clickable="true"
        />
    
  </LinearLayout>  
  

