<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

   
    <TextView
        android:id="@+id/text_passcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/passcode_confirm"
        android:textSize="30sp"
        android:layout_marginTop="5dp" 
        android:gravity="center_horizontal" />
    
  
     <LinearLayout
            android:id="@+id/Layoutpasscode2"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:orientation="horizontal" 
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center">
        
         <ProgressBar
    style="?android:attr/progressBarStyleLarge"
    android:id="@+id/myprogressbar1"
    android:layout_width="30sp"
	android:layout_height="30sp"
    android:indeterminateDrawable="@drawable/progress"
    android:indeterminate="false" />
    
         <ProgressBar
    android:id="@+id/myprogressbar2"         
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="30sp"
	android:layout_height="30sp"
    android:indeterminateDrawable="@drawable/progress"
    android:layout_marginLeft="15dp" />
         
         <ProgressBar
    android:id="@+id/myprogressbar3"         
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="30sp"
	android:layout_height="30sp"
    android:indeterminateDrawable="@drawable/progress"
    android:layout_marginLeft="15dp" />
         
         <ProgressBar
    android:id="@+id/myprogressbar4"         
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="30sp"
	android:layout_height="30sp"
    android:indeterminateDrawable="@drawable/progress" 
    android:layout_marginLeft="15dp"/>
         
      </LinearLayout>  
        
    <EditText
	    android:id="@+id/count_click"
	    android:inputType="number"
	    android:layout_width="match_parent"
        android:layout_height="5dp"
        android:hint="@string/count_click"
        android:layout_gravity="center"
        android:background="@drawable/customised_edit_text"
        android:singleLine="true"
        android:gravity="center|left"
        android:textColorHint="#98EAC1"
        android:paddingLeft="20dp"
        android:layout_marginTop="5dp"
    />
    
    <EditText
	    android:id="@+id/total_click"
	    android:inputType="number"
	    android:layout_width="match_parent"
        android:layout_height="5dp"
        android:hint="@string/total_click"
        android:layout_gravity="center"
        android:background="@drawable/customised_edit_text"
        android:singleLine="true"
        android:gravity="center|left"
        android:textColorHint="#98EAC1"
        android:paddingLeft="20dp"
        android:layout_marginTop="2dp"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
    />
    
    <EditText
        android:id="@+id/UserHiddenConfirmPass"
        android:labelFor="@id/UserHiddenConfirmPass"
        android:inputType="number"
	    android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/customised_edit_text"
        android:singleLine="true"
        android:gravity="center|left"
        android:textColorHint="#98EAC1"
        android:paddingLeft="20dp"
        android:layout_marginTop="2dp"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"/>
     <EditText
        android:id="@+id/UserHiddenConfirmPass2"
        android:labelFor="@id/UserHiddenConfirmPass2"
        android:inputType="number"
	    android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/customised_edit_text"
        android:singleLine="true"
        android:gravity="center|left"
        android:textColorHint="#98EAC1"
        android:paddingLeft="20dp"
        android:layout_marginTop="2dp"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"/>
    
     <LinearLayout
            android:id="@+id/LayoutPassRowFirst"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
        
         
	    <Button style="?android:attr/buttonBarButtonStyle"
	android:id="@+id/ButtonPassOne"   
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/one"
    android:textSize="25sp"
	android:layout_marginRight="25dp" 
	android:scaleType="fitCenter"
	android:textColor="@drawable/text_color"  
	
	/>	
	
     <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassTwo"       
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/two"
	android:textSize="25sp" 
	android:layout_marginRight="25dp"
	android:textColor="@drawable/text_color"  />	
	
     <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassThree"     
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/three"
	android:textSize="25sp"
	android:textColor="@drawable/text_color"   />
         
    </LinearLayout> 
        
      <LinearLayout
            android:id="@+id/LayoutPassRowSecond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
        
         
    <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassFour"     
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/four"
	android:textSize="25sp"
	android:layout_marginRight="25dp" 
	android:textColor="@drawable/text_color"  
	/>	
	
     <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassFive"  
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/five"
	android:textSize="25sp" 
	android:layout_marginRight="25dp"
	android:textColor="@drawable/text_color"  />	
	
     <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassSix"      
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/six"
	android:textSize="25sp"
	android:textColor="@drawable/text_color"   />
         
         
     </LinearLayout> 
        
      <LinearLayout
            android:id="@+id/LayoutPassRowThird"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
         
         
    <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassSeven"      
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/seven"
	android:textSize="25sp"
	android:layout_marginRight="25dp" 
	android:textColor="@drawable/text_color"  
	/>	
	
     <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassEight"       
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/eight"
	android:textSize="25sp" 
	android:layout_marginRight="25dp"
	android:textColor="@drawable/text_color"  />	
	
     <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassNine"       
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:gravity="center_vertical|center_horizontal"
	android:text="@string/nine"
	android:textSize="25sp"
	android:textColor="@drawable/text_color"   />
         
         
     </LinearLayout> 
        
     <LinearLayout
            android:id="@+id/LayoutPassRowFour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"    
            android:gravity="center">
       
         
    <Button style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/ButtonPassZero"      
	android:layout_width="75sp"
	android:layout_height="75sp"
	android:background="@drawable/round_button"
	android:text="@string/zero"
	android:textSize="25sp"
	android:gravity="center"
	android:textColor="@drawable/text_color"  />	
	
    </LinearLayout>
    
    <Button style="?android:attr/buttonBarButtonStyle"
     android:id="@+id/ButtonCheckPasscode" 
	 android:layout_width="fill_parent"
	 android:layout_height="60dp"
	 android:text="@string/next"
	 android:background="@drawable/customised_button"
	 android:textSize="20sp"
	 android:textColor="@android:color/white"
	 android:clickable="true"
	 android:onClick="gotoMain"
	 android:layout_marginTop="25dp"
	 />

   </LinearLayout> 