<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@android:color/white">


    	<RelativeLayout 
    android:id="@+id/layout2" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="top"
    android:background="@android:color/white"
    > 
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:background="@drawable/left_top"
        android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:background="@drawable/right_top"
            android:contentDescription="@string/app_name" />
   	    
    
	</RelativeLayout>    
	
   	 <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="125dp"
    android:orientation="vertical" 
    
    >
    
   	<ImageView
        android:id="@+id/imagefirstname"
        android:layout_width="75dp"
        android:layout_height="match_parent" 
        android:contentDescription="@string/app_name"
        android:background="@drawable/logo"
        android:scaleType="center"
        android:layout_gravity="center" />
   	
   	</LinearLayout>
   	
   	 <LinearLayout
    android:layout_width="250dp"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_marginTop="25dp" 
    android:layout_gravity="center">
   	
   	     
   	     <EditText
        android:id="@+id/UserEmailToLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:background="@drawable/customised_edit_text"
        android:singleLine="true"
        android:gravity="center|left"
        android:textColorHint="#98EAC1"
        android:paddingLeft="20dp"
        >
        <requestFocus />
       </EditText>  
   	    
   	   <EditText
        android:id="@+id/UserPasswordToLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:background="@drawable/customised_edit_text"
        android:singleLine="true"
        android:gravity="center|left"
        android:textColorHint="#98EAC1"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        >
      
       </EditText>  
       
   	    <TextView
        android:id="@+id/UserRememberMe"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/forgot_password"
        android:textColor="#30D683"
        android:textSize="15sp" 
        android:cacheColorHint="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_marginTop="5dp"
        android:onClick="gotoaccountrecovery"
        android:clickable="true"
      /> 
   	     
   	    </LinearLayout> 
   	    
   	 <Button
     android:id="@+id/ButtonSignup"        
     android:layout_width="fill_parent"
     android:layout_height="60dp"
     android:text="@string/signup"
     android:background="@drawable/customised_button" 
     android:textSize="20sp"
     android:textColor="@android:color/white"
     android:onClick="gotosignup"
     android:clickable="true" >
   	     
   	 </Button>
    
    
</LinearLayout>    