<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@android:color/white">

    
   	<RelativeLayout 
    android:id="@+id/layout2" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="top"
    android:background="@android:color/white"
    > 
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:background="@drawable/left_top"
        android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:background="@drawable/right_top"
            android:contentDescription="@string/app_name" />
   	    
    
	</RelativeLayout>    
	
   	 <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="125dp"
    android:orientation="vertical" 
    
    >
    
   	<ImageView
        android:id="@+id/imagefirstname"
        android:layout_width="75dp"
        android:layout_height="match_parent" 
        android:contentDescription="@string/app_name"
        android:background="@drawable/logo"
        android:scaleType="center"
        android:layout_gravity="center" />
   	
   	</LinearLayout>
   	
   	  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="35dp"
    android:background="@android:color/white"
    android:orientation="horizontal" 
    android:gravity="center"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="20dp">  
    
        <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
         /> 
    </LinearLayout>    
        
       <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal" 
    android:gravity="center_horizontal"
    android:layout_marginTop="5dp">  
        
	<Button style="?android:attr/buttonBarButtonStyle"
	android:layout_width="80dp"
	android:layout_height="80dp"
	android:background="@drawable/yahoo"
	android:gravity="center_horizontal"
	android:layout_marginRight="15dp"
	 />	
	
	<Button style="?android:attr/buttonBarButtonStyle"
	android:layout_width="80dp"
	android:layout_height="80dp"
	android:background="@drawable/google"
	android:gravity="center_horizontal"
	android:layout_marginRight="15dp"
	/>	
	
	<Button style="?android:attr/buttonBarButtonStyle"
	android:layout_width="80dp"
	android:layout_height="80dp"
	android:background="@drawable/msn"
	android:gravity="center_horizontal"
	/>
	   
    </LinearLayout> 
    
   
		    <TableRow
		    android:id="@+id/tableRow3"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"  
		    android:layout_gravity="center_horizontal"
		    android:gravity="center">
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:singleLine="true"
		        android:text="@string/or"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="22sp" />
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/login"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="#54d66a"
		        android:textSize="22sp" 
		        android:clickable="true"
		        android:onClick="gotosignin"/>
		
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email_details"
		        android:textSize="22sp" />
		    
		    
		   </TableRow>
		   
	
		   	    
		   
		  <LinearLayout
        
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1" 
    android:gravity="center"
   
    > 
      
       <Button 
	  android:id="@+id/ButtonMainSignUp"           
	  android:layout_width="match_parent"
	  android:layout_height="60dp"
	  android:text="@string/signup"
	  android:gravity="center"
	  android:textSize="20sp"
	  android:background="#54d66a"
	  android:textColor="@android:color/white"
	  android:onClick="gotosignup"
	  android:clickable="true"
	 
	  />
     
          	 </LinearLayout> 
   	
   	 </LinearLayout>